--- a/src/components/NavbarMobile/NavbarMobile.module.scss
+++ b/src/components/NavbarMobile/NavbarMobile.module.scss
@@ -1,5 +1,13 @@
 @import "../../styles/_media-queries.scss";
 
+.overlay {
+  width: 100%;
+  height: 50%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+}
 .container {
   position: fixed;
   top: 0;
@@ -38,7 +46,6 @@
     gap: 3rem;
     align-items: center;
     justify-content: center;
-    z-index: 3;
     color: black;
 
     &.dark {
@@ -53,7 +60,7 @@
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
-      padding: 1.5rem;
+      padding: 1rem 1.5rem;
 
       &:hover {
         color: red;
@@ -81,7 +88,7 @@
     }
   }
 
-  @include medium-screen {
+  @include small-screen {
     font-size: 14px;
     padding: 1.5rem;
     gap: 1rem;
