--- a/src/components/RegularButton/RegularButton.module.scss
+++ b/src/components/RegularButton/RegularButton.module.scss
@@ -1,6 +1,5 @@
 .button {
   position: absolute;
-  z-index: 4;
   background: none;
   border: none;
   padding: 5px 15px;
