--- a/src/components/Spotlight/Spotlight.module.scss
+++ b/src/components/Spotlight/Spotlight.module.scss
@@ -7,30 +7,10 @@
   background-color: #6f585500;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center content horizontally */
-  justify-content: center; /* Center content vertically */
+  align-items: center;
+  justify-content: center;
   height: 100%;
-
-  // @include small-screen {
-  //   background: linear-gradient(
-  //     360deg,
-  //     rgba(148, 163, 176, 1) 0%,
-  //     rgba(148, 163, 176, 1) 85%,
-  //     rgba(148, 163, 176, 0.8895465874233128) 88%,
-  //     rgba(148, 163, 176, 0.5858656058282208) 92%,
-  //     rgba(148, 163, 176, 0) 100%
-  //   );
-  //   &.dark {
-  //     background: linear-gradient(
-  //       360deg,
-  //       rgba(2, 0, 36, 1) 0%,
-  //       rgba(2, 5, 25, 1) 85%,
-  //       rgba(2, 6, 24, 0.8895465874233128) 88%,
-  //       rgba(2, 6, 24, 0.5858656058282208) 92%,
-  //       rgba(2, 6, 23, 0) 100%
-  //     );
-  //   }
-  // }
+  z-index: 0;
 }
 
 .mask,
@@ -67,7 +47,7 @@
 }
 
 .paragraph {
-  padding: 1.25rem; /* Adjust padding as needed */
+  padding: 1.25rem;
   margin: 0;
   max-width: 500px;
 
