--- a/src/components/VideoBackground/VideoBackground.module.scss
+++ b/src/components/VideoBackground/VideoBackground.module.scss
@@ -3,7 +3,7 @@
   height: 100%;
   object-fit: cover;
   position: fixed;
-  z-index: -1;
+  z-index: -2;
 }
 
 .overlay {
